--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "dotenv": "16.0.0",
     "express": "4.17.3",
-    "mysql": "2.18.1",
-    "dotenv":"16.0.0"
+    "mysql": "2.18.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon app.js",
+    "dev": "npm run server"
   },
   "repository": {
     "type": "git",
