--- a/.envTemplate
+++ b/.envTemplate
@@ -1,4 +1,4 @@
-MYSQL_HOST=
-MYSQL_PASSWORD=
-MYSQL_USER=
-MYSQL_DATABASE=
+MYSQL_HOST=f80b6byii2vwv8cx.chr7pe7iynqr.eu-west-1.rds.amazonaws.com
+MYSQL_PASSWORD=rz2paeyvb7sy4rnt
+MYSQL_USER=zy9bc43cj4pj140x
+MYSQL_DATABASE=xien3lmm1z5yym60
