--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "dotenv": "16.0.0",
     "express": "4.17.3",
-    "mysql": "2.18.1"
+    "mysql": "^2.18.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/aleksan18/DeliverySystem/issues"
   },
-  "homepage": "https://github.com/aleksan18/DeliverySystem#readme"
+  "homepage": "https://github.com/aleksan18/DeliverySystem#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
