--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "dotenv": "16.0.0",
     "express": "4.17.3",
-    "mysql": "2.18.1"
+    "mysql": "2.18.1",
+    "mysql2": "^2.3.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
