--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dotenv": "16.0.0",
     "express": "4.17.3",
     "express-validator": "^6.14.0",
-    "mysql": "2.18.1"
+    "mysql": "2.18.1",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.3.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
