--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "16.0.0",
     "express": "4.17.3",
     "express-validator": "^6.14.0",
+    "mongoose": "^6.3.3",
     "mysql": "2.18.1"
   },
   "scripts": {
