--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "16.0.0",
     "express": "4.17.3",
     "express-validator": "^6.14.0",
-    "mysql": "2.18.1"
+    "mysql": "2.18.1",
+    "neo4j-driver": "^4.4.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
