--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "5.0.1",
     "dotenv": "16.0.0",
     "express": "4.17.3",
     "express-validator": "^6.14.0",
     "mongoose": "^6.3.3",
+    "jsonwebtoken": "8.5.1",
     "mysql": "2.18.1"
   },
   "scripts": {
