--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "dotenv": "16.0.0",
     "express": "4.17.3",
     "express-validator": "^6.14.0",
-    "mongoose": "^6.3.3",
     "jsonwebtoken": "8.5.1",
-    "mysql": "2.18.1"
+    "mongoose": "^6.3.3",
+    "mysql": "2.18.1",
+    "neo4j-driver": "^4.4.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
