--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcrypt": "5.0.1",
     "dotenv": "16.0.0",
+    "eslint": "^8.16.0",
     "express": "4.17.3",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "8.5.1",
@@ -16,7 +17,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon app.js",
-    "dev": "npm run server"
+    "dev": "npm run server",
+    "lint": "npx eslint ."
   },
   "repository": {
     "type": "git",
